<resources>
    <string name="app_name">Fitness Timer</string>
    <string name="workout_set_title">title</string>
    <string name="workout_set_desc">description</string>

    <string name="navigation_draw_open">open navigation drawer</string>
    <string name="navigation_draw_close">close navigation drawer</string>

    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="start">start</string>
    <string name="expand">expand</string>
    <string name="edit">edit</string>

    <string name="pw">Predefine Workout</string>
    <string name="cw">Custom Workout</string>
    <string name="badge">Badge</string>
    <string name="statistic">Statistic</string>
    <string name="menu">Menu</string>
    <string name="workout_info">Workout Information</string>

    <string name="header_title">Header Title</string>
    <string name="header_text">Header Text</string>

    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>

    <string name="workout_name">Workout Name</string>
    <string name="description">Description</string>
    <string name="numOfexercise">No. of Exercise</string>
    <string name="next">next</string>

    <string name="exercise_name">Exercise Name</string>
    <string name="numOfSet">No. of Sets</string>
    <string name="numOfRep">No. of Reps</string>
    <string name="rest_time">Rest Time</string>
    <string name="duration">Duration</string>
    <string name="time_gap">Time Gap</string>

    <string name="duration_helper_text">Duration of each exercise</string>
    <string name="rest_time_helper_text">Rest time between set</string>
    <string name="time_gap_helper_text">Time gap between current and next workout</string>

    <string name="set_no">0</string>
    <string name="time">00:00</string>

    <string name="prepare">Prepare</string>
    <string name="ready">Ready</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="finish">Finish</string>
    <string name="finishBtn">finish</string>
    <string name="skipBtn">skip</string>

    <string name="empty_error">This field shouldn\'t be empty!</string>

    <string name="importBtn">import</string>

    <string name="completed_workout">completed workouts</string>
    <string name="time_spent">time spent</string>

    <string name="zero">0</string>



</resources>