<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BadgeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/holo_orange_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/cwTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/completed_workout"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TextView
                android:id="@+id/cwTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cwTitleTV"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/holo_orange_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tsTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/time_spent"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TextView
                android:id="@+id/tsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tsTitleTV"
                android:gravity="center_horizontal"
                android:text="@string/zero"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/holo_orange_dark" />
    </LinearLayout>

</FrameLayout>